# rust-commerce

./: .lintstagedrc  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  test-on-pr.yml
.husky/: pre-commit
apps/backend/: .env.example  Cargo.toml  Dockerfile  sqlx-data.json
apps/backend/src/: config.rs  cors.rs  error.rs  main.rs
apps/backend/src/db/migrations/2022-10-16-022252_create_products/: up.sql
apps/backend/src/migrations/: 20221207130730_customers_table.up.sql
apps/backend/src/routes/: customer.rs  mod.rs  product.rs
apps/frontend/: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  vitest.config.ts
apps/frontend/pages/: index.tsx
apps/frontend/pages/cart/: index.tsx
apps/frontend/pages/checkout/: index.tsx
apps/frontend/pages/customer/create/: index.tsx
apps/frontend/src/components/AddAddressModal/: AddAddressModal.tsx
apps/frontend/src/components/AddCardModal/: AddCardModal.tsx
apps/frontend/src/components/CalculateFreight/: CalculateFreight.tsx
apps/frontend/src/components/CartQuantityIndicator/: CartQuantityIndicator.tsx
apps/frontend/src/config/: index.ts
apps/frontend/src/context/: CartContext.spec.tsx  Providers.tsx
apps/frontend/src/ui/: Button.tsx  Card.tsx  Dialog.tsx  Flex.tsx  Input.tsx  Label.tsx  Link.tsx  Select.tsx  Text.tsx  globalStyle.ts  index.tsx
apps/frontend/src/utils/: MoneyFormatter.ts  useMutation.tsx
backend/: Cargo.toml  diesel.toml
backend/src/: main.rs  routes.rs  schema.rs
frontend/: .eslintrc.json  .prettierrc.json  README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/pages/: _app.tsx  providers.tsx
frontend/pages/cart/: index.tsx
frontend/pages/checkout/: index.tsx
frontend/pages/product/: [id].tsx
frontend/src/components/AddCardModal/: AddCardModal.tsx
frontend/src/components/AddToChartButton/: AddToChartButton.tsx
frontend/src/components/BackToTop/: BackToTop.tsx
frontend/src/components/CalculateFreight/: CalculateFreight.tsx
frontend/src/components/CartItem/: CartItem.tsx
frontend/src/components/CartTotalSum/: CartTotalSum.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/PaymentSelection/: PaymentSelection.tsx
frontend/src/context/: CartContext.spec.tsx  CartContext.tsx
frontend/src/ui/: Box.tsx  Button.tsx  Card.tsx  Dialog.tsx  Flex.tsx  Grid.tsx  Heading.tsx  Input.tsx  Label.tsx  MaskedInput.tsx  Select.tsx  Text.tsx  globalStyle.ts  index.tsx  stitches.config.ts
src/: main.rs  routes.rs
src/db/: prod.db
(+5 files in other folders)
