[package]
name = "buyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = "2"
dotenvy = "0.15"
axum = "0.5.16"
tokio = { version = "1.21.2", features = ["full"]}
serde = { version = "1.0.145", features = ["derive"]}