[package]
name = "buyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "migrate",
  "offline",
] }
dotenvy = "0.15"
axum = "0.6"
utoipa = { features = ["axum_extras"], version = "3.0.3" }
utoipa-swagger-ui = { features = ["axum"], version = "3.0.2" }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies]
tower = "0.4.13"
serde_json = "1.0.93"
